--- a/app/assets/javascripts/application.coffee.erb
+++ b/app/assets/javascripts/application.coffee.erb
@@ -130,7 +130,7 @@ $ ->
   $(document).on 'click', '.sidebar-toggler', () ->
     width = $('.sidebar').width()
     zoom = $('.ol-zoom')
-    scale = $('.ol-scale-line')
+    scale = $('.ol-scale-line, .ol-scale-bar')
     geoloc = $('.geolocation')
     addr_search = $('.address-search-field')
     $('.sidebar').toggle()
