--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -317,7 +317,11 @@ header
 
 .view-switcher span.text
   display: block;
+  font-weight: bold;
   text-align: center;
+
+.view-switcher .expand span.text
+  margin-bottom: 0.5em;
 
 .address-search-field
   position: absolute
