--- a/app/assets/stylesheets/maps.sass
+++ b/app/assets/stylesheets/maps.sass
@@ -54,6 +54,7 @@
     span.text
       display: none
 
+  .ol-scale-bar,
   .ol-scale-line
     background: none
     background-color: transparent
@@ -71,6 +72,7 @@
     left: 325px
     top: 90px
   
+  .ol-scale-bar,
   .ol-scale-line
     left: 325px
     background: none
@@ -141,6 +143,7 @@
   button
     font-size: $h1-font-size
 
+.ol-scale-bar-inner,
 .ol-scale-line-inner
   font-weight: bold
   color: #333
