Redmine #5006: Verbesserung der Performance beim Laden vieler Meldungen (#137)

--- a/app/assets/javascripts/maps.coffee.erb
+++ b/app/assets/javascripts/maps.coffee.erb
@@ -470,6 +470,7 @@ class KS.FeatureData
     extent = ol.proj.transformExtent(extent, KS.projection(), KS.projectionWGS84)
     $.ajax(url: controller, dataType: 'json', data: {
       center: ol.extent.getCenter(extent),
+      map: true,
       radius: ol.sphere.getDistance(ol.extent.getBottomLeft(extent), ol.extent.getCenter(extent))
     }).done (response) ->
       features = new Array
