--- a/app/assets/stylesheets/maps.sass
+++ b/app/assets/stylesheets/maps.sass
@@ -20,7 +20,7 @@
   margin-right: 20px
 
 .navbar .navbar-nav > li:last-child
-  margin-right: 00px
+  margin-right: 0
 
 .collapsing ul.nav,
 .collapse ul.nav
